[package]

name = "gnunet"
version = "0.0.11"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "Bindings for GNUnet: GNU's framework for secure peer-to-peer networking"
documentation = "http://canndrew.org/rust-doc/gnunet"
license = "GPL-3.0"
readme = "README.md"
keywords = ["gnunet", "gns", "p2p"]

[dependencies]
unix_socket = "0.3.0"
rand = "0.3"
byteorder = "*"
error_def = "*"
rust-crypto = "*"

