[package]

name = "gnunet"
version = "0.0.14"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "Bindings for GNUnet: GNU's framework for secure peer-to-peer networking"
documentation = "http://canndrew.org/rust-doc/gnunet"
license = "GPL-3.0"
readme = "README.md"
keywords = ["gnunet", "gns", "p2p"]

[dependencies]
unix_socket = ">= 0.3.0"
rand = ">= 0.3"
byteorder = ">= 0.3.10"
error_def = ">= 0.3.6"
rust-crypto = ">= 0.2.31"
num = ">= 0.1.24"
regex = ">= 0.1.8"
regex_macros = ">= 0.1.8"

