[package]

name = "gnunet"
version = "0.0.15"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "Bindings for GNUnet: GNU's framework for secure peer-to-peer networking"
documentation = "http://canndrew.org/rust-doc/gnunet"
license = "GPL-3.0"
readme = "README.md"
keywords = ["gnunet", "gns", "p2p"]

[dependencies]
unix_socket = ">= 0.3.0"
rand = ">= 0.3"
byteorder = ">= 0.3.10"
quick-error = ">= 1.2.2"
rust-crypto = ">= 0.2.31"
num = ">= 0.1.24"
regex = ">= 1.0.0"
lazy_static = ">= 1.1.0"
libc = ">= 0.2.43"

